k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-js-service
spec:
  type: ClusterIP
  selector:
    app: node-js
  ports:
  - port: 4000
    targetPort: 4000
